<resources>
    <string name="empty_accounts_list_empty">You have no accounts</string>
    <string name="empty_accounts_list_subtitle">Tap the \'+\' button below on the right to add a new account.</string>
    <string name="title_account_list">Your Accounts</string>
    <string name="title_account_overview">Overview</string>
    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>
    <string name="overview_current_balance">Current Balance</string>
    <string name="overview_available_balance">Available Balance</string>
    <string name="overview_last_record">Last Record Amount</string>
    <string name="title_account_create">Add Account</string>
    <string name="widget_title_recent_records">Recent Records</string>
    <string name="widget_view_more">More</string>
    <string name="title_records_list">Records</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_goals">Goals</string>
    <string name="title_charts">Charts</string>
    <string name="title_reports">Reports</string>
    <string name="nav_account_close">Leave Account</string>
    <string name="title_settings">Settings</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="records_none_message">There are no records available</string>
    <string name="record_empty_subtitle">Tap the \'+\' button below on the right to add a transaction.</string>
    <string name="change_date_range">Change Date Range</string>
    <string name="title_date_range_select">Choose Date Range</string>
    <string name="choose">Choose</string>

    <string-array name="date_ranges">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="transfer_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string name="category_salary">Salary</string>
    <string name="category_loan">Loan</string>
    <string name="category_gifts">Gifts</string>
    <string name="category_other">Other</string>

    <string name="category_car">Car</string>
    <string name="category_travel">Travel</string>
    <string name="category_food_drink">Food &amp; Drink</string>
    <string name="category_personal">Personal</string>
    <string name="category_bills">Bills</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_home">Home</string>
    <string name="category_utilities">Utilities</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_accommodation">Accommodation</string>
    <string name="category_health">Health</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_transport">Transportation</string>
    <string name="category_groceries">Groceries</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_hobbies">Hobbies</string>
    <string name="category_pets">Pets</string>
    <string name="category_education">Education</string>
    <string name="category_cinema">Cinema</string>
    <string name="category_kids">Kids</string>
    <string name="category_rent">Rent</string>
    <string name="category_mortgage">Mortgage</string>
    <string name="category_phone">Phone</string>
    <string name="category_savings">Savings</string>

    <string name="title_records_create">Add New Record</string>
    <string name="title_category_list">Categories</string>
    <string name="action_pick_location">Choose Location</string>
    <string name="hint_location">Location</string>
    <string name="action_pick_date">Choose Date</string>
    <string name="hint_date">Date</string>
    <string name="hint_note">Note</string>
    <string name="hint_transfer_type">Type</string>
    <string name="action_pick_transfer_type">Choose Type</string>
    <string name="title_transfer_type">Transfer Type</string>
    <string name="oops_error">Oops, looks like there was a problem.</string>
    <string name="category_select_error">Please select a category.</string>
    <string name="amount_invalid_error">Please enter a valid amount.</string>
    <string name="record_create_success">Record successfully created.</string>
    <string name="transfer_type_select_error">Please select a transfer type.</string>
    <string name="hint_account_name">Account Name</string>
    <string name="zero">0</string>
    <string name="action_pick_currency">Choose Currency</string>
    <string name="hint_currency">Currency</string>
    <string name="hint_initial_balance">Initial Balance</string>
    <string name="title_currencies">Currencies</string>
    <string name="balance_invalid_error">Invalid balance amount.</string>
    <string name="name_invalid_error">Name must not be blank.</string>
    <string name="icon_select_error">No icon has been selected.</string>
    <string name="account_create_success">Account successfully created.</string>
    <string name="icon_wallet">Wallet</string>
    <string name="icon_credit_card">Credit Card</string>
    <string name="icon_piggy">Piggy Bank</string>
    <string name="icon_money_bag">Money Bag</string>
    <string name="icon_coins">Coins</string>
    <string name="icon_safebox">Safebox</string>
    <string name="title_account_icon_select">Select icon</string>
    <string name="widget_recent_records_empty">No recent records available.</string>
    <string name="title_goal">Goal</string>
    <string name="title_goal_add">Add Goal</string>
    <string name="goal">Goal</string>
    <string name="hint_target_date">Target Date</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_saved_amount">Saved Amount</string>
    <string name="hint_target_amount">Target Amount</string>
    <string name="icon_select_title">Select Icon</string>
    <string name="cancel">Cancel</string>
    <string name="goal_created_success">Goal Successfully Created.</string>
    <string name="goal_target_amount">Target: %1$s</string>
    <string name="currency_invalid_error">Please select a currency.</string>
    <string name="delete">Delete</string>
    <string name="widget_title_upcoming_goals">Upcoming Goals</string>
    <string name="widget_upcoming_goals_empty">There are no upcoming goals.</string>
    <string name="dialog_delete_goal">Delete Goal</string>
    <string name="dialog_delete_goal_message">Are you sure you would like to delete this goal?</string>
    <string name="dialog_delete_record">Delete Record</string>
    <string name="dialog_delete_record_message">Are you sure you would like to delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="goal_dialog_title">Amount Saved</string>
    <string name="goal_dialog_content">Enter how much money you have saved towards your goal.</string>
    <string name="goals_empty_title">No goals have been set</string>
    <string name="goal_last_amount">Last amount added:</string>
    <string name="goal_target_date">Target Date:</string>
    <string name="goal_add_saved_amount">Add Amount</string>
    <string name="goals_empty_message">You have not added any goals. Try adding some now.</string>
    <string name="category_select">Select a category</string>
    <string name="date_invalid_error">Please select a valid date</string>
    <string name="record_deleted">Record has been deleted</string>
    <string name="goal_status">Status</string>
    <string name="status_goal_reached">Goal Reached</string>
    <string name="status_goal_exceeded">Goal Exceeded</string>
    <string name="status_goal_in_progress">In Progress</string>
    <string name="status_goal_failed">Failed to reach goal</string>
</resources>
