<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_account_overview"/>

        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_coin_hand"
            android:title="@string/title_records_list"/>

        <item
            android:id="@+id/nav_budgets"
            android:icon="@drawable/ic_budget"
            android:title="@string/title_budgets"/>

        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_bullseye"
            android:title="@string/title_goals"/>

        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/title_charts"/>

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/title_reports"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_settings"/>

        <item
            android:id="@+id/nav_sign_out"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_sign_out_option"
            android:title="@string/nav_account_close"/>

    </group>

</menu>