<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:background="?attr/colorPrimary"
       tools:parentTag="android.support.constraint.ConstraintLayout">

    <TextView
        android:id="@+id/overview_balance_label"
        style="@style/Overview.Collapse.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_current_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/overview_balance_value"
        style="@style/Overview.Collapse.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/overview_value_margin_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_balance_label"
        tools:text="£4050.00"/>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/overview_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/overview_available_label"/>

    <TextView
        android:id="@+id/overview_available_label"
        style="@style/Overview.Collapse.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/overview_sub_title_margin_vertical"
        android:text="@string/overview_available_balance"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_balance_value"/>

    <TextView
        android:id="@+id/overview_last_record_label"
        style="@style/Overview.Collapse.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/overview_sub_title_margin_vertical"
        android:text="@string/overview_last_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/overview_balance_value"/>

    <TextView
        android:id="@+id/overview_available_value"
        style="@style/Overview.Collapse.Value.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/overview_value_margin_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview_available_label"
        tools:text="£4050.00"/>

    <TextView
        android:id="@+id/overview_last_record_value"
        style="@style/Overview.Collapse.Value.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/overview_value_margin_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/overview_last_record_label"
        tools:text="N/A"/>

</merge>